--- a/MeetupAPI/MeetupAPI/appsettings.json
+++ b/MeetupAPI/MeetupAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source = localhost\\SQLEXPRESS01; Initial Catalog = Meetup; Integrate Security = True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
