--- a/MeetupAPI/MeetupAPI/MeetupAPI.csproj
+++ b/MeetupAPI/MeetupAPI/MeetupAPI.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Meetup.BLL\Meetup.BLL.csproj" />
   </ItemGroup>
 
 </Project>
