--- a/MeetupAPI/MeetupAPI/appsettings.json
+++ b/MeetupAPI/MeetupAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=Meetup;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=Meetup;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
