--- a/MeetupAPI/MeetupAPI/MeetupAPI.csproj
+++ b/MeetupAPI/MeetupAPI/MeetupAPI.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Meetup.BLL\Meetup.BLL.csproj" />
+    <ProjectReference Include="..\Utils\Utils.csproj" />
   </ItemGroup>
 
 </Project>
